# fasthep-flow

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  noxfile.py  pixi.toml  pyproject.toml
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: alpha-ci.yml  cd.yml  ci.yml  readme.yml
docs/: command_line_interface.md  concepts.md  conf.py  configuration.md  developers_corner.md  executors.md  filters.md  index.md  installation.md  interactive_python.md  known_issues.md  operators.md  orchestration.md  provenance.md
docs/_static/css/: custom.css
docs/advanced_examples/: cms_full_analysis_example.md  index.md
docs/concepts/: credentials.md  execution-infrastructure.md  index.md  resource-pools.md  worker-environments.md
docs/configuration/: environments.md  global_settings.md  index.md  products.md  register.md  variations.md
docs/custom-operations/: hooks.md  index.md  renderers.md  sinks.md  sources.md
docs/design/: execution_infrastructure.md
docs/devcon/: executors.md  index.md  operators.md  orchestration.md
docs/developer-architecture/: index.md
docs/examples/: atlas_example.md  cms_pub_example.md  dune_example.md  hello_world.md  hello_world.yaml  index.md  job_dependencies.md  lhcb_example.md  lz_example.md  manim.md  task_dependencies.md
docs/extensibility/: index.md  operations-and-specs.md  profiles-and-registries.md  strategies-and-backends.md  strategies.md
docs/overview/: compilation-pipeline.md  execution-model.md  getting-started.md  index.md  workflow-language.md
docs/reference/: changelog.md  index.md  plan.md  runtime.md
scripts/manual/: test_pooled_htcondor.py
src/fasthep_flow/: __init__.py  _version.pyi  checksums.py  cli.py  config.py  orchestration.py  provenance.py  utils.py  workflow.py
src/fasthep_flow/config/: __init__.py
src/fasthep_flow/core/: __init__.py
src/fasthep_flow/dsl/: __init__.py
src/fasthep_flow/io/: __init__.py  _uproot5.py
src/fasthep_flow/operators/: __init__.py  base.py  bash.py  processing.py  py_call.py  python.py
src/fasthep_flow/plugins/: __init__.py  _base.py  defaults.py  logging.py  output.py  tests.py
src/fasthep_flow/savers/: __init__.py  _hamilton.py
src/fasthep_flow/templates/: __init__.py
src/hepflow/: __init__.py  _version.pyi  api.py  build_layout.py  utils.py
src/hepflow/backends/: __init__.py  dask_htcondor.py  dask_local.py  loaders.py  local.py  model.py
src/hepflow/compiler/: artifacts.py  compile_hooks.py  d2_graph.py  data_flow.py  diagnostics.py  exec_dag.py  exec_graph.py  execution.py  expr_symbols.py  graph_artifacts.py  includes.py  inspect.py  issues.py  lower_graph.py  normalize.py  parsers.py  plan.py  plan_diff.py  profiles.py  registry_resolution.py  report.py  routing.py  source_schema.py  styles.py  symbols.py  systematics.py
src/hepflow/model/: __init__.py  applicability.py  author.py  component_spec.py  cutflow.py  data_flow.py  defaults.py  deps.py  execution.py  graph.py  hist.py  hooks.py  io.py  ir.py  issues.py  lifecycle.py  ops.py  plan.py  plan_applicability.py  products.py  render.py  render_types.py  report.py  resources.py  source_schema.py
src/hepflow/profiles/: __init__.py  basic.yaml  dask_local.yaml  hep.yaml  hep_debug.yaml  init.py  registry.yaml
src/hepflow/registry/: __init__.py  defaults.py  expr.py  loaders.py  merge.py  model.py  runtime.py
src/hepflow/render/: __init__.py
src/hepflow/runtime/: __init__.py  branch_check.py  config.py  context.py  engine.py  execution_modifiers.py  handlers.py  lifecycle.py  materialize.py  merge.py  operation_provenance.py  provenance.py  provenance_inspect.py  records.py  report.py  reports.py  sources.py  stream_readers.py  writer_manifests.py
tests/: MIGRATED_FROM.md  conftest.py  simple_config.yaml  test_architecture.py  test_backend_loader.py  test_build_layout.py  test_checksums.py  test_compile_hooks.py  test_config.py  test_dask_htcondor_backend.py  test_dask_local_backend.py  test_dataset_applicability.py  test_execution_modifiers.py  test_execution_normalization.py  test_histogram_materialization.py  test_hooks_data_flow.py  test_init_project.py  test_model_public_api.py  test_normalize_plan_api.py  test_package.py  test_profiles_registry.py  test_reports.py  test_runtime_operation_provenance.py  test_runtime_provenance.py  test_runtime_toy.py  test_systematics_expansion.py  test_systematics_normalize.py  test_utils.py  test_workflow.py
tests/backends/_dask/: test_common.py  test_htcondor.py  test_local.py  test_pooled.py  test_pools.py  test_slurm.py
tests/data/: download_remote_data.py  parallel.yaml  plugins.yaml  remote_data.json  simple_config.yaml  single_tree_root_file.yaml  single_tree_root_file_with_curator.yaml
tests/fixtures/: toy_registry.yaml
tests/fixtures/authors/: toy_author.yaml
tests/issues/: __init__.py
tests/operators/: test_bash.py  test_py.py  test_pycall.py
tests/plugins/: test_wrapper.py
tests/toy_components/: compile_hooks.py  hooks.py  modifiers.py  observers.py  renderers.py  sinks.py  sources.py  transforms.py
(+25 files in other folders)
