[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fasthep-flow"
dynamic = ["version"]
description = "Dependency-light FAST-HEP graph workflow core."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "FAST-HEP contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "networkx",
    "numpy",
    "pyyaml",
]

[project.optional-dependencies]
local = [
    "awkward",
    "uproot",
]
dask-local = [
    "dask[complete]",
]
test = [
    "pytest",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/hepflow/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/hepflow"]

[tool.hatch.build.targets.sdist]
include = [
    "src/hepflow",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
src = ["src", "tests"]
line-length = 88
target-version = "py311"
extend-exclude = [
  "src/hepflow/_version.py",
]

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "B",
  "I",
  "ARG",
  "C4",
  "ICN",
  "ISC",
  "G",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "T20",
  "UP",
  "YTT",
  "EXE",
  "NPY",
]
ignore = [
  "E501",   # Line too long; handled pragmatically by formatter/review
  "PLR",    # Design-related pylint refactor recommendations
  "EM101",  # Raw string literals in exceptions are acceptable here
  "EM102",  # Allow inline f-strings in exceptions
  "EM103",  # Allow exception messages directly in raise statements
]
unfixable = ["T20", "F841"]

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "ARG"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]
